fix(superfish nav): no more jumping subnav on loading

--- a/css/style.css
+++ b/css/style.css
@@ -8258,30 +8258,32 @@ p:last-child,
       .navbar-header .block-superfish .menu > li:not(:last-of-type).sfHover > a, .navbar-header .block-superfish .menu > li:not(:last-of-type).active-trail > a {
         border-color: #16a085; }
       /* line 160, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .block-superfish .menu > li:not(:last-of-type).sfHover > ul {
+        top: auto; }
+      /* line 166, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li:last-of-type {
         padding: 9px 20px; }
-      /* line 164, ../scss/fxj/_navbar-header.scss */
+      /* line 170, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li > ul {
         box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
         background-color: white;
-        text-align: left;
-        top: auto; }
-        /* line 170, ../scss/fxj/_navbar-header.scss */
+        text-align: left; }
+        /* line 175, ../scss/fxj/_navbar-header.scss */
         .navbar-header .block-superfish .menu > li > ul > li > a {
           font-weight: 300;
           font-size: 16px;
           padding: 10px 20px; }
-    /* line 179, ../scss/fxj/_navbar-header.scss */
+    /* line 184, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):before {
       top: 24px; }
-    /* line 184, ../scss/fxj/_navbar-header.scss */
+    /* line 189, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
       color: #333333; }
-  /* line 192, ../scss/fxj/_navbar-header.scss */
+  /* line 197, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     right: 0px;
     top: 15px; }
-    /* line 196, ../scss/fxj/_navbar-header.scss */
+    /* line 201, ../scss/fxj/_navbar-header.scss */
     .navbar-header .search-block-form .form-item {
       margin-bottom: 0; } }
 /* line 2, ../scss/fxj/_forms.scss */
